<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tables"
            android:gravity="center"
            style="@style/titleStyle"
            android:padding="10dp"
            android:background="#1e87f0"
            android:textColor="#FFFFFF"
            android:textSize="36sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/adder"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:hint="@string/table"
                android:layout_margin="10dp"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/addtable"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                style="@style/buttonStyle"
                android:onClick="addtable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
